fix z-index of background

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,7 +32,6 @@ p {
   width: 100%;
   background-color: hsl(214, 64%, 98%);
   position: relative;
-  z-index: -1;
   overflow: hidden;
   }
 
@@ -46,7 +45,7 @@ p {
   background: linear-gradient(hsl(322, 100%, 66%),hsl(265, 100%, 66%));
   transform: rotate(-35deg);
   position: absolute;
-  z-index: -2;
+  z-index: -1;
   left: 250px;
   top: -100px;
 }
@@ -57,7 +56,7 @@ p {
   background-color: #fff;
   transform: rotate(-30deg);
   position: absolute;
-  z-index: -3;
+  z-index: -2;
   top: 300px;
   left: 0px;
 }
@@ -78,7 +77,6 @@ header {
 .btn {
   border: none;
   border-radius: 2px;
-  outline: none;
 }
 
 .header-btn {
